--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -9,7 +9,7 @@
     <title>Sleep Outside | North Face Talus 4-person tent</title>
 
     <link rel="stylesheet" href="../css/style.css" />
-
+    <script type="module" src="./js/main.js"></script>
     <script src="../js/product.js" type="module"></script>
   </head>
 
